--- a/src/main/resources/com/example/csit228f2_2/hello-view.fxml
+++ b/src/main/resources/com/example/csit228f2_2/hello-view.fxml
@@ -2,60 +2,40 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="367.0" prefWidth="423.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csit228f2_2.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
+<AnchorPane prefHeight="367.0" prefWidth="423.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csit228f2_2.HelloController">
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
    <children>
-      <ProgressBar fx:id="pbLife" layoutX="112.0" layoutY="255.0" prefWidth="200.0" progress="0.69" />
-      <ToggleButton fx:id="tbNight" layoutX="356.0" layoutY="32.0" mnemonicParsing="false" onAction="#onNightModeClick" text="Night Mode" />
-      <Text fx:id="txtName" layoutX="65.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
-         <font>
-            <Font name="Rockwell Bold" size="71.0" />
-         </font>
-         <fill>
-            <RadialGradient centerX="0.3782287611732624" centerY="0.5" radius="0.5">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color red="0.5526315569877625" />
-                     </color>
-                  </Stop>
-                  <Stop offset="0.16793893129770993">
-                     <color>
-                        <Color red="0.5526315569877625" />
-                     </color>
-                  </Stop>
-                  <Stop offset="0.7353689567430022">
-                     <color>
-                        <Color red="0.6200000047683716" green="0.6060017943382263" blue="0.0868000015616417" />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="0.12766903638839722" green="0.08265648782253265" blue="0.6228070259094238" />
-                     </color>
-                  </Stop>
-               </stops>
-            </RadialGradient>
-         </fill>
-      </Text>
-      <Spinner layoutX="82.0" layoutY="140.0" />
-      <ProgressIndicator layoutX="329.0" layoutY="244.0" progress="0.67" />
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="277.0" layoutY="78.0" pickOnBounds="true" preserveRatio="true" />
-      <ChoiceBox layoutX="267.0" layoutY="302.0" prefWidth="150.0" />
-      <MenuButton layoutX="82.0" layoutY="302.0" mnemonicParsing="false" text="MenuButton">
-        <items>
-            <MenuItem mnemonicParsing="false" text="Cross Shift" />
-          <MenuItem mnemonicParsing="false" text="CS" />
-          <MenuItem mnemonicParsing="false" text="IT" />
-        </items>
-      </MenuButton>
-      <PasswordField layoutX="106.0" layoutY="184.0" />
+      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="20.0">
+         <children>
+            <TextField fx:id="tfNewUsername" promptText="New username">
+               <font>
+                  <Font size="18.0" />
+               </font></TextField>
+            <Button fx:id="btnsetNewUsername" mnemonicParsing="false" onAction="#setNewUsername" text="Set new username">
+               <font>
+                  <Font size="14.0" />
+               </font></Button>
+            <PasswordField fx:id="tfNewPassword" promptText="New Password">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </PasswordField>
+            <Button fx:id="setNewPassword" mnemonicParsing="false" onAction="#setNewPassword" text="Set new password">
+               <font>
+                  <Font size="14.0" />
+               </font></Button>
+            <Label />
+            <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#onDeleteAccount" text="DELETE ACCOUNT">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
